--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
 body {
-	background-color:Pink;
+
+  color: White;
   font-family: sans-serif;
   font-size: 1.2em;
+ background-image: URL("http://www.spacetelescope.org/static/archives/images/publicationjpg/heic1206a.jpg")
 
 }
+
+
 
 h1{
 	color:White;
@@ -21,5 +25,29 @@ p{
 
 img{
 
-  width: 100%
+  width: 40%
+  position:relative;
 }
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+
+
+
